gcc/testsuite/g++.dg/modules/atom-decl-3.C
// { dg-options "-fmodules-atom" }

int i;
import baz; // { dg-error "must be within module preamble" }
